[project]
name = "run-openai-oss-20b"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.10.0",
    "kernels>=0.9.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "torch>=2.8.0",
    "transformers==4.55.2",
    "triton==3.4.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
]

[tool.uv]
python-preference="only-managed"

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
    { index = "pytorch-cu129", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

